--- a/research/index.html
+++ b/research/index.html
@@ -133,21 +133,15 @@ Projects
             </nav>
         </header>
 <!-- Content -->
- <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    
-</head>
 
 <body>
     <!-- Main News Slider Start -->
-    <div class="container-fluid">
+    <div class="container-fluid" style="width: 80%; margin: 0 auto; padding: 0;">
         <div class="row">
             <div class="col-lg-7 px-0">
                 <div class="owl-carousel main-carousel position-relative">
                     <div class="position-relative overflow-hidden" style="height: 500px;">
-                        <img class="img-fluid h-100" src="img/news-800x500-1.jpg" style="object-fit: cover;">
+                        <img class="img-fluid h-100" src="../assets/img/5.jpg" style="object-fit: cover;">
                         <div class="overlay">
                             <div class="mb-2">
                                 <a class="text-white" href="">Jan 01, 2045</a>
@@ -156,7 +150,7 @@ Projects
                         </div>
                     </div>
                     <div class="position-relative overflow-hidden" style="height: 500px;">
-                        <img class="img-fluid h-100" src="img/news-800x500-2.jpg" style="object-fit: cover;">
+                        <img class="img-fluid h-100" src="../assets/img/5.jpg" style="object-fit: cover;">
                         <div class="overlay">
                             <div class="mb-2">
                                 <a class="text-white" href="">Jan 01, 2045</a>
@@ -165,7 +159,7 @@ Projects
                         </div>
                     </div>
                     <div class="position-relative overflow-hidden" style="height: 500px;">
-                        <img class="img-fluid h-100" src="img/news-800x500-3.jpg" style="object-fit: cover;">
+                        <img class="img-fluid h-100" src="../assets/img/5.jpg" style="object-fit: cover;">
                         <div class="overlay">
                             <div class="mb-2">
                                 <a class="text-white" href="">Jan 01, 2045</a>
@@ -179,7 +173,7 @@ Projects
                 <div class="row mx-0">
                     <div class="col-md-6 px-0">
                         <div class="position-relative overflow-hidden" style="height: 250px;">
-                            <img class="img-fluid w-100 h-100" src="img/news-700x435-1.jpg" style="object-fit: cover;">
+                            <img class="img-fluid w-100 h-100" src="../assets/img/5.jpg" style="object-fit: cover;">
                             <div class="overlay">
                                 <div class="mb-2">
                                     <a class="text-white" href=""><small>Jan 01, 2045</small></a>
@@ -190,7 +184,7 @@ Projects
                     </div>
                     <div class="col-md-6 px-0">
                         <div class="position-relative overflow-hidden" style="height: 250px;">
-                            <img class="img-fluid w-100 h-100" src="img/news-700x435-2.jpg" style="object-fit: cover;">
+                            <img class="img-fluid w-100 h-100" src="../assets/img/5.jpg" style="object-fit: cover;">
                             <div class="overlay">
                                 <div class="mb-2">
                                     <a class="text-white" href=""><small>Jan 01, 2045</small></a>
@@ -201,7 +195,7 @@ Projects
                     </div>
                     <div class="col-md-6 px-0">
                         <div class="position-relative overflow-hidden" style="height: 250px;">
-                            <img class="img-fluid w-100 h-100" src="img/news-700x435-3.jpg" style="object-fit: cover;">
+                            <img class="img-fluid w-100 h-100" src="../assets/img/5.jpg" style="object-fit: cover;">
                             <div class="overlay">
                                 <div class="mb-2">
                                     <a class="text-white" href=""><small>Jan 01, 2045</small></a>
@@ -212,7 +206,7 @@ Projects
                     </div>
                     <div class="col-md-6 px-0">
                         <div class="position-relative overflow-hidden" style="height: 250px;">
-                            <img class="img-fluid w-100 h-100" src="img/news-700x435-4.jpg" style="object-fit: cover;">
+                            <img class="img-fluid w-100 h-100" src="../assets/img/5.jpg" style="object-fit: cover;">
                             <div class="overlay">
                                 <div class="mb-2">
                                     <a class="text-white" href=""><small>Jan 01, 2045</small></a>
@@ -228,15 +222,15 @@ Projects
     <!-- Main News Slider End -->
 
     <!-- News With Sidebar Start -->
-    <div class="row">
+    <div class="row" style="width: 85%; margin: 0 auto; padding-top: 20px;">
         <div class="col-12">
             <div class="section-title">
-                <h4 class="m-0 text-uppercase font-weight-bold">Latest News</h4>
+                <h4 class="m-0 text-uppercase font-weight-bold" style="text-align: center;">Latest News</h4>
             </div>
         </div>
         <div class="col-lg-6">
             <div class="position-relative mb-3">
-                <img class="img-fluid w-100" src="img/news-700x435-1.jpg" style="object-fit: cover;">
+                <img class="img-fluid w-100" src="../assets/img/5.jpg" style="object-fit: cover;">
                 <div class="bg-white border border-top-0 p-4">
                     <div class="mb-2">
                         <a class="text-body" href=""><small>Jan 01, 2045</small></a>
@@ -245,21 +239,11 @@ Projects
                     <p class="m-0">Dolor lorem eos dolor duo et eirmod sea. Dolor sit magna
                         rebum clita rebum dolor stet amet justo</p>
                 </div>
-                <div class="d-flex justify-content-between bg-white border border-top-0 p-4">
-                    <div class="d-flex align-items-center">
-                        <img class="rounded-circle mr-2" src="img/user.jpg" width="25" height="25" alt="">
-                        <small>John Doe</small>
-                    </div>
-                    <div class="d-flex align-items-center">
-                        <small class="ml-3"><i class="far fa-eye mr-2"></i>12345</small>
-                        <small class="ml-3"><i class="far fa-comment mr-2"></i>123</small>
-                    </div>
-                </div>
             </div>
         </div>
         <div class="col-lg-6">
             <div class="position-relative mb-3">
-                <img class="img-fluid w-100" src="img/news-700x435-2.jpg" style="object-fit: cover;">
+                <img class="img-fluid w-100" src="../assets/img/5.jpg" style="object-fit: cover;">
                 <div class="bg-white border border-top-0 p-4">
                     <div class="mb-2">
                         <a class="text-body" href=""><small>Jan 01, 2045</small></a>
@@ -267,16 +251,6 @@ Projects
                     <a class="h4 d-block mb-3 text-secondary text-uppercase font-weight-bold" href="">Lorem ipsum dolor sit amet elit...</a>
                     <p class="m-0">Dolor lorem eos dolor duo et eirmod sea. Dolor sit magna
                         rebum clita rebum dolor stet amet justo</p>
-                </div>
-                <div class="d-flex justify-content-between bg-white border border-top-0 p-4">
-                    <div class="d-flex align-items-center">
-                        <img class="rounded-circle mr-2" src="img/user.jpg" width="25" height="25" alt="">
-                        <small>John Doe</small>
-                    </div>
-                    <div class="d-flex align-items-center">
-                        <small class="ml-3"><i class="far fa-eye mr-2"></i>12345</small>
-                        <small class="ml-3"><i class="far fa-comment mr-2"></i>123</small>
-                    </div>
                 </div>
             </div>
         </div>
@@ -285,43 +259,23 @@ Projects
         </div>
         <div class="col-lg-6">
             <div class="position-relative mb-3">
-                <img class="img-fluid w-100" src="img/news-700x435-3.jpg" style="object-fit: cover;">
+                <img class="img-fluid w-100" src="../assets/img/5.jpg" style="object-fit: cover;">
                 <div class="bg-white border border-top-0 p-4">
                     <div class="mb-2">
                         <a class="text-body" href=""><small>Jan 01, 2045</small></a>
                     </div>
                     <a class="h4 d-block mb-0 text-secondary text-uppercase font-weight-bold" href="">Lorem ipsum dolor sit amet elit...</a>
-                </div>
-                <div class="d-flex justify-content-between bg-white border border-top-0 p-4">
-                    <div class="d-flex align-items-center">
-                        <img class="rounded-circle mr-2" src="img/user.jpg" width="25" height="25" alt="">
-                        <small>John Doe</small>
-                    </div>
-                    <div class="d-flex align-items-center">
-                        <small class="ml-3"><i class="far fa-eye mr-2"></i>12345</small>
-                        <small class="ml-3"><i class="far fa-comment mr-2"></i>123</small>
-                    </div>
                 </div>
             </div>
         </div>
         <div class="col-lg-6">
             <div class="position-relative mb-3">
-                <img class="img-fluid w-100" src="img/news-700x435-4.jpg" style="object-fit: cover;">
+                <img class="img-fluid w-100" src="../assets/img/5.jpg" style="object-fit: cover;">
                 <div class="bg-white border border-top-0 p-4">
                     <div class="mb-2">
                         <a class="text-body" href=""><small>Jan 01, 2045</small></a>
                     </div>
                     <a class="h4 d-block mb-0 text-secondary text-uppercase font-weight-bold" href="">Lorem ipsum dolor sit amet elit...</a>
-                </div>
-                <div class="d-flex justify-content-between bg-white border border-top-0 p-4">
-                    <div class="d-flex align-items-center">
-                        <img class="rounded-circle mr-2" src="img/user.jpg" width="25" height="25" alt="">
-                        <small>John Doe</small>
-                    </div>
-                    <div class="d-flex align-items-center">
-                        <small class="ml-3"><i class="far fa-eye mr-2"></i>12345</small>
-                        <small class="ml-3"><i class="far fa-comment mr-2"></i>123</small>
-                    </div>
                 </div>
             </div>
         </div>
@@ -371,7 +325,7 @@ Projects
         <div class="col-lg-12">
             <div class="row news-lg mx-0 mb-3">
                 <div class="col-md-6 h-100 px-0">
-                    <img class="img-fluid h-100" src="img/news-700x435-5.jpg" style="object-fit: cover;">
+                    <img class="img-fluid h-100" src="../assets/img/5.jpg" style="object-fit: cover;">
                 </div>
                 <div class="col-md-6 d-flex flex-column border bg-white h-100 px-0">
                     <div class="mt-auto p-4">
@@ -381,16 +335,6 @@ Projects
                         <a class="h4 d-block mb-3 text-secondary text-uppercase font-weight-bold" href="">Lorem ipsum dolor sit amet elit...</a>
                         <p class="m-0">Dolor lorem eos dolor duo et eirmod sea. Dolor sit magna
                             rebum clita rebum dolor stet amet justo</p>
-                    </div>
-                    <div class="d-flex justify-content-between bg-white border-top mt-auto p-4">
-                        <div class="d-flex align-items-center">
-                            <img class="rounded-circle mr-2" src="img/user.jpg" width="25" height="25" alt="">
-                            <small>John Doe</small>
-                        </div>
-                        <div class="d-flex align-items-center">
-                            <small class="ml-3"><i class="far fa-eye mr-2"></i>12345</small>
-                            <small class="ml-3"><i class="far fa-comment mr-2"></i>123</small>
-                        </div>
                     </div>
                 </div>
             </div>
